fail2ban (0.7.4-3~3) unstable; urgency=low

  * Reincarnated logrotate configuration (Closes: #397878)
  * Only block new connects by using a new action iptables-new instead of
    iptables (Closes: #350746)
  * Updated README.Debian to reflect transition over to 0.7 branch and to
    comment on 350746
  * "Clean" target removes generated .pyc files now (Closes: #398146)

 -- Yaroslav O. Halchenko <debian@onerussian.com>  Sat, 11 Nov 2006 21:00:18 -0500

fail2ban (0.7.4-2) unstable; urgency=low

  * Added reload/force-reload actions to init script
  * Adjusted jail.conf a bit
  * Warning NEWS entry for 0.7.1 was not shown during installation on test
    boxes, thus postinst was adjusted accordingly to inform the user about the
    changes in the configuration files since 0.6.
  * no logrotation anymore? (Closes: #397878)

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 10 Nov 2006 10:53:23 -0500

fail2ban (0.7.4-1) experimental; urgency=low

  * New upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed,  1 Nov 2006 20:54:14 -0500

fail2ban (0.7.4~pre20061023.2-3) experimental; urgency=low

  * Corrected init.d script to properly perform restart due to server delay to
    react to client command to stop. Handling of status was adjusted as well

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 29 Oct 2006 22:29:27 -0500

fail2ban (0.7.4~pre20061023.2-2) experimental; urgency=low

  * Added apache-noscript to jail.conf
  * Default action does not send emails to be inline with previous (0.6.x)
    behavior

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 26 Oct 2006 13:27:20 -0400

fail2ban (0.7.4~pre20061023.2-1) experimental; urgency=low

  * Fresh upstream: fixed a bug with not handling error producing
    actioncheck call

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 23 Oct 2006 17:00:03 -0400

fail2ban (0.7.4~pre2006102-1) experimental; urgency=low

  * Currrent snapshot of trunk